bindings/c/galley.h

/* Opaque parsing-session handle. */
typedef struct GalleySession GalleySession;
/* Stable node index into a session's AST storage. */
typedef unsigned long long GalleyNodeAddress;
/* Returns the number of direct children of a node, or 0 for invalid
 * nodes. */
unsigned int galley_node_child_count(GalleySession *session, GalleyNodeAddress node);
/* Tree navigation: return GALLEY_INVALID_NODE when the link does not exist
 * (including the root's parent). */
GalleyNodeAddress galley_node_first_child(GalleySession *session, GalleyNodeAddress node);
GalleyNodeAddress galley_node_last_child(GalleySession *session, GalleyNodeAddress node);
GalleyNodeAddress galley_node_next_sibling(GalleySession *session, GalleyNodeAddress node);
GalleyNodeAddress galley_node_prior_sibling(GalleySession *session, GalleyNodeAddress node);
GalleyNodeAddress galley_node_parent(GalleySession *session, GalleyNodeAddress node);
/* Writes the byte offset and length of a node's matched source span into
 * *out_start / *out_len. Offsets index the input of the most recent
 * parse. */
long long galley_node_span(GalleySession *session, GalleyNodeAddress node,
                           unsigned long long *out_start, unsigned long long *out_len);
/* Writes the grammar symbol name of a node (for example "ObjectMembers")
 * into *out_data / *out_len. The pointer references static storage valid
 * for the lifetime of the process. Terminal-only nodes report length 0.
 * Returns galley_ok or galley_error_invalid_node. */
long long galley_node_symbol_name(GalleySession *session, GalleyNodeAddress node,
                                  const char **out_data, size_t *out_len);
/* Returns the raw variable index of a node into the variable list (see
 * galley_variable_name), or -1 when the node has no variable. */
long long galley_node_variable_index(GalleySession *session, GalleyNodeAddress node);
/* Writes the source text matched by a node into *out_data / *out_len. The
 * pointer references the input of the most recent parse: keep that input
 * alive until the next parse (galley_parse_sentinel) or rely on the session,
 * which copies it (galley_parse). During an in-progress parse (procedure
 * hooks) the pointer references the live input of that parse. */
long long galley_node_text(GalleySession *session, GalleyNodeAddress node,
                           const char **out_data, size_t *out_len);
/* Writes the 1-based line and column of a node's first byte into
 * *out_line / *out_column. Scans the retained input, so cost is linear in
 * the offset. */
long long galley_node_line_column(GalleySession *session, GalleyNodeAddress node,
                                  unsigned int *out_line, unsigned int *out_column);
/* Procedure hooks receive an opaque ProcedureArguments pointer. Tree queries
 * and edits use the session from galley_procedure_session with the ordinary
 * galley_node_* / galley_tree_* functions. The remaining calls below are
 * parse-time state that does not exist on a finished session: the current
 * node, the reducing rule, scanner line/column, and the drop/replace channel
 * (args.node_address). galley_tree_remove_self is not a substitute for
 * galley_procedure_drop_self. */
GalleySession *galley_procedure_session(void *args);
unsigned long long galley_procedure_current_node(void *args);
void galley_procedure_set_current_node(void *args, unsigned long long node);
int galley_procedure_rule_present(void *args);
long long galley_procedure_rule_header(void *args);
long long galley_procedure_rule_rhs_index(void *args);
long long galley_procedure_rule_right_hand_side(void *args, const unsigned short **out_data, size_t *out_len);
long long galley_procedure_rule_rhs_index_slice(void *args, const char **out_data, size_t *out_len);
unsigned int galley_procedure_context_line(void *args);
unsigned int galley_procedure_context_column(void *args);
long long galley_procedure_drop_self(void *args);
long long galley_procedure_drop_children(void *args);
long long galley_procedure_drop_if_empty(void *args);
long long galley_procedure_replace_with_children(void *args);
long long galley_procedure_left_recursive_reduction(void *args);
long long galley_procedure_right_recursive_reduction(void *args);